adding about.html
previous file was wrong

--- a/about.html
+++ b/about.html
@@ -1,19 +1,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About Me</title>
+    <title>About</title>
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
 
   <body>
-    <h1>About me</h1>
-    <h2>Wassup!</h2>
-    <img src="selfie.png" alt="Photo of myself" height=500px>
-    <p>Hello! I'm Nicole Segarra. I'm a 10th grader</p>
-    <p>at Trinity. My interests are swimming,</p>
-    <p>painting, reading, music, and writing. </p>
-    <p><strong>The following is a link to a really cool website:</strong></p>
-    <p><a href="https://asoftmurmur.com/">A Soft Murmur</a></p>
+    <h1>Suicides Per Population and Probable Cause</h1>
+    <h2>About</h2>
+    <h3>Vocabulary according to data.oecd.org :</h3>
+    <p>Suicide rates are defined as the deaths deliberately initiated and performed by a person in the full knowledge or expectation of its fatal outcome.</p>
+    <img src="SolMacro.png" alt="Solomon's Macro sketch" height=200px>
+    <img src="SolMicro.png" alt="Solomon's Micro sketch" height=200px>
+    <img src="NicMacro.png" alt="Nicole's Macro sketch" height=200px>
+    <img src="NicMicro.png" alt="Nicol's micro sketch" height=200px>
+    <p></p>
+    <p><strong>The following is a link to a  website:</strong></p>
+    <p><a href="websitelink">Title</a></p>
   </body>
 </html>
