adding photos and about.html update

--- a/about.html
+++ b/about.html
@@ -9,14 +9,24 @@
   <body>
     <h1>Suicides Per Population and Probable Cause</h1>
     <h2>About</h2>
-    <h3>Vocabulary according to data.oecd.org :</h3>
+    <h3>Vocabulary according to data.oecd.org:</h3>
     <p>Suicide rates are defined as the deaths deliberately initiated and performed by a person in the full knowledge or expectation of its fatal outcome.</p>
-    <img src="SolMacro.png" alt="Solomon's Macro sketch" height=200px>
-    <img src="SolMicro.png" alt="Solomon's Micro sketch" height=200px>
-    <img src="NicMacro.png" alt="Nicole's Macro sketch" height=200px>
-    <img src="NicMicro.png" alt="Nicol's micro sketch" height=200px>
-    <p></p>
-    <p><strong>The following is a link to a  website:</strong></p>
-    <p><a href="websitelink">Title</a></p>
+    <h3>Lo-Fi wireframe sketches :</h3>
+    <img src="SolMacro.jpg" alt="Solomon's Macro sketch" height=200px>
+    <p>Evaluation of wireframe: </p>
+    <p>Elements selected:</p>
+    <img src="SolMicro.jpg" alt="Solomon's Micro sketch" height=200px>
+    <p>Evaluation of wireframe: </p>
+    <p>Elements selected:</p>
+    <img src="NicMacro.jpg" alt="Nicole's Macro sketch" height=200px>
+    <p>Evaluation of wireframe: </p>
+    <p>Elements selected:</p>
+    <img src="NicMicro.jpg" alt="Nicol's micro sketch" height=200px>
+    <p>Evaluation of wireframe:</p>
+    <p>Elements selected:</p>
+    <h3>Descriptions of our pipeline:</h3>
+    <p>stuff</p>
+    <h4>Division of labor:</h4>
+    <p>stuff</p>
   </body>
 </html>
