--- a/about.html
+++ b/about.html
@@ -19,14 +19,34 @@
     <p>Evaluation of wireframe: </p>
     <p>Elements selected:</p>
     <img src="NicMacro.jpg" alt="Nicole's Macro sketch" height=200px>
-    <p>Evaluation of wireframe: </p>
-    <p>Elements selected:</p>
-    <img src="NicMicro.jpg" alt="Nicol's micro sketch" height=200px>
-    <p>Evaluation of wireframe:</p>
-    <p>Elements selected:</p>
-    <h3>Descriptions of our pipeline:</h3>
+    <h4>Evaluation of wireframe:</h4>
+    <p>Modeling- Lacked good modeling because parts of some countries were missing due to bad spacing.</p>
+    <p>Visibility- /p>
+    <p>Consistency- </p>
+    <p>Structure- </p>
+    <p>Simplicity- </p>
+    <p>Documentation- </p>
+    <p>Discoverability[signifiers]- </p>
+    <p>Usability[ease]- </p>
+    <p>Cultural[privacy]- </p>
+    <h4>Elements selected:</h4>
     <p>stuff</p>
-    <h4>Division of labor:</h4>
+    <img src="NicMicro.jpg" alt="Nicol's micro sketch" height=200px>
+    <h4>Evaluation of wireframe:</h4>
+    <p>Modeling- Lacked good modeling because parts of some countries were missing due to bad spacing.</p>
+    <p>Visibility- /p>
+    <p>Consistency- </p>
+    <p>Structure- </p>
+    <p>Simplicity- </p>
+    <p>Documentation- </p>
+    <p>Discoverability[signifiers]- </p>
+    <p>Usability[ease]- </p>
+    <p>Cultural[privacy]- </p>
+    <h4>Elements selected:</h4>
+    <p>stuff</p>
+    <h5>Descriptions of our pipeline:</h5>
+    <p>stuff</p>
+    <h5>Division of labor:</h5>
     <p>stuff</p>
   </body>
 </html>
