evaluations for my images and our pipeline

--- a/about.html
+++ b/about.html
@@ -21,31 +21,35 @@
     <img src="NicMacro.jpg" alt="Nicole's Macro sketch" height=200px>
     <h4>Evaluation of wireframe:</h4>
     <p>Modeling- Lacked good modeling because parts of some countries were missing due to bad spacing.</p>
-    <p>Visibility- /p>
-    <p>Consistency- </p>
-    <p>Structure- </p>
-    <p>Simplicity- </p>
-    <p>Documentation- </p>
-    <p>Discoverability[signifiers]- </p>
-    <p>Usability[ease]- </p>
-    <p>Cultural[privacy]- </p>
+    <p>Visibility- Almost all elements needed are seen, with the exception of some countries. It's easy to read./p>
+    <p>Consistency- Uses well known map of the world for easy comprehension.</p>
+    <p>Structure- The labels are on top or next to their respective countries which makes good structure.</p>
+    <p>Simplicity- Minimal use of words; efficiently conveying the information needed.</p>
+    <p>Documentation- The labels would help serve as documentation.</p>
+    <p>Discoverability[signifiers]- Forgot to add a drop down menu and text indicating they can click each country for its micro.</p>
+    <p>Usability[ease]- Would need the drop down menu for better usage without fatigue of finding the country.</p>
+    <p>Cultural[privacy]- The rates are related only to countries and not specific cities or neighborhoods, so privacy is ensured.</p>
     <h4>Elements selected:</h4>
-    <p>stuff</p>
+    <p>Labeling on the countries with their name + ":" + rate.</p>
     <img src="NicMicro.jpg" alt="Nicol's micro sketch" height=200px>
     <h4>Evaluation of wireframe:</h4>
-    <p>Modeling- Lacked good modeling because parts of some countries were missing due to bad spacing.</p>
-    <p>Visibility- /p>
-    <p>Consistency- </p>
-    <p>Structure- </p>
-    <p>Simplicity- </p>
-    <p>Documentation- </p>
-    <p>Discoverability[signifiers]- </p>
-    <p>Usability[ease]- </p>
-    <p>Cultural[privacy]- </p>
+    <p>Modeling- Good labeling and modeling.</p>
+    <p>Visibility- Almost all elements needed are seen, with the exception of a return button./p>
+    <p>Consistency- Lables are consistent with common graphs.</p>
+    <p>Structure- Infirmation about the cause is on the side, making teh viewer see teh graphs first and then the possible reasoning.</p>
+    <p>Simplicity- Minimal use of words; efficiently conveying the information needed.</p>
+    <p>Documentation- The labels would help serve as documentation.</p>
+    <p>Discoverability[signifiers]- Forgot to add a return button so the user can easily go back to the macro.</p>
+    <p>Usability[ease]- Graph choices are impratical for easy readibility.</p>
+    <p>Cultural[privacy]- The rates are related only to countries and not specific cities or neighborhoods, so privacy is ensured.</p>
     <h4>Elements selected:</h4>
-    <p>stuff</p>
+    <p>Hyperlinking the websites we will get our information from for the probable causes.</p>
+    <img src="projectPipeline.png" alt="Project Pipeline Graphic" height=200px>
     <h5>Descriptions of our pipeline:</h5>
-    <p>stuff</p>
+    <p>We first brainstormed on what topic we wanted to cover and then looked to find csv files we could use.</p>
+    <p>We made our sketches of what we wanted the website to look like and discussed the pros and cons to each design.</p>
+    <p>Evaluated the designs with the Design principles and see if we missed anything during our discussion of the pros and cons.</p>
+    <p>Created the about.html page and reflected on how we should approach creating our website and our division of labor.</p>
     <h5>Division of labor:</h5>
     <p>stuff</p>
   </body>
