macro Evaluations and Edits

--- a/about.html
+++ b/about.html
@@ -13,7 +13,17 @@
     <p>Suicide rates are defined as the deaths deliberately initiated and performed by a person in the full knowledge or expectation of its fatal outcome.</p>
     <h3>Lo-Fi wireframe sketches :</h3>
     <img src="SolMacro.jpg" alt="Solomon's Macro sketch" height=200px>
-    <p>Evaluation of wireframe: </p>
+    <h4>Evaluation of wireframe:</h4>
+    <p>Modeling- Reasonably good modeling. All countries were included, although some were distorted out of proportion. </p>
+    <p>Visibility- All countries that will be examined are shown and nearly all world countrys are on the map/p>
+    <p>Consistency- Uses well known map of the world for easy comprehension.</p>
+    <p>Structure- The labels are on top or next to their respective countries which makes good structure.</p>
+    <p>Simplicity- Minimal use of words; efficiently conveying the information need.</p>
+    <p>Documentation- Small notes to help give the users an understanding of what direction certain aspects will go in.</p>
+    <p>Discoverability[signifiers]- Simple and clear, but there is not a drop down menu and text indicating they can click each country for its micro.</p>
+    <p>Usability[ease]- Would need the drop down menu for better usage without fatigue of finding the country.</p>
+    <p>Cultural[privacy]- The rates are related only to countries and not specific cities or neighborhoods, so privacy is ensured.</p>
+    <h4>Elements selected:</h4>
     <p>Elements selected:</p>
     <img src="SolMicro.jpg" alt="Solomon's Micro sketch" height=200px>
     <p>Evaluation of wireframe: </p>
