--- a/about.html
+++ b/about.html
@@ -70,7 +70,13 @@
     <p>We made our sketches of what we wanted the website to look like and discussed the pros and cons to each design.</p>
     <p>Evaluated the designs with the Design principles and see if we missed anything during our discussion of the pros and cons.</p>
     <p>Created the about.html page and reflected on how we should approach creating our website and our division of labor.</p>
+    <p>Our next step will be to begin implementing our index HTML file and also make sure that we understand how to template our data (ejs)</p>
+    <p>Then we will use EJS to dynamically insert our data onto our webpage.</p>
+    <p>We plan on using the plotly software Specifically a dynamic countries map that uses shades of colors to represent density of a variable.</p>
     <h5>Division of labor:</h5>
-    <p>stuff</p>
+    <p>Solomon: Use ejs templating and ploty to implement the baseline micro and macro views of the world</p>
+    <p>Nicole: Learn how to make drop down menus, create all clickable links, specifically on each country (once they have been implemented)</p>
+    <p>Solomon+Nicole: Clean up the UI and use CSS/Bootstrap to make it appear neat for the final presentation</p>
+
   </body>
 </html>
