--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
     <p>Then we will use EJS to dynamically insert our data onto our webpage.</p>
     <p>We plan on using the plotly software Specifically a dynamic countries map that uses shades of colors to represent density of a variable.</p>
     <h5>Division of labor:</h5>
-    <p>Solomon: Use ejs templating and ploty to implement the baseline micro and macro views of the world</p>
+    <p>Solomon: Use ejs templating and ploty to implement the baseline micro and macro views of the world. Navbar</p>
     <p>Nicole: Learn how to make drop down menus, create all clickable links, specifically on each country (once they have been implemented)</p>
     <p>Solomon+Nicole: Clean up the UI and use CSS/Bootstrap to make it appear neat for the final presentation</p>
   <script src="{{< param 'cdn.js_bundle' >}}" integrity="{{< param 'cdn.js_bundle_hash' >}}" crossorigin="anonymous"></script>
