--- a/public/SVK.html
+++ b/public/SVK.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
+
 <body>
   <header>
     <h1>SVK</h1>
@@ -18,14 +19,20 @@
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>Year: 2019</li>
-    <li>Frequency: 1.9</li>
+    <li>Year:
+      
+    </li>
   </ul>
   </section>
 
   <footer>
-  This is my awesome, dynamically inserted footer! Data from <a href="https://www.kaggle.com/gulsahdemiryurek/harry-potter-dataset"> Kaggle - Harry Potter</a>
+  my footer <a href="https://www.kaggle.com/gulsahdemiryurek/harry-potter-dataset"> Kaggle - Harry Potter</a>
 </footer>
+
+</body>
+
+</html>
+
 
 </body>
 
