--- a/public/﻿LOCATION.html
+++ b/public/﻿LOCATION.html
@@ -24,7 +24,7 @@
   </section>
 
   <footer>
-  This is my awesome, dynamically inserted footer! Data from <a href="https://www.kaggle.com/gulsahdemiryurek/harry-potter-dataset"> Kaggle - Harry Potter</a>
+  This is my awesome, dynamically inserted footer! Data from <a href="https://data.oecd.org/healthstat/suicide-rates.htm"> oecd.org - Suicide Rates</a>
 </footer>
 
 </body>
