--- a/public/CHE.html
+++ b/public/CHE.html
@@ -19,21 +19,15 @@
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>Year:
-      
-    </li>
+    
   </ul>
   </section>
 
   <footer>
-  my footer <a href="https://www.kaggle.com/gulsahdemiryurek/harry-potter-dataset"> Kaggle - Harry Potter</a>
+  This is my awesome, dynamically inserted footer! Data from <a href="https://data.oecd.org/healthstat/suicide-rates.htm"> oecd.org - Suicide Rates</a>
 </footer>
 
-</body>
-
 </html>
 
 
 </body>
-
-</html>
