--- a/public/ARG.html
+++ b/public/ARG.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html lang="en">
+<!doctype html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -19,6 +21,7 @@
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
+    <li>1960: </li>
     
   </ul>
   </section>
