Making pipeline run

--- a/public/index.html
+++ b/public/index.html
@@ -3077,7 +3077,7 @@
   </section>
 
   <footer>
-  This is my awesome, dynamically inserted footer! Data from <a href="https://data.oecd.org/healthstat/suicide-rates.htm"> oecd.org - Suicide Rates</a>
+  Suicides per population per year between 1960-2020 seem to indicate a strong correlation between national issues and people's mental health. The data used is from <a href="https://data.oecd.org/healthstat/suicide-rates.htm"> OECD.org - Suicide rate</a>
 </footer>
 
 </html>
