Fixing some tings

--- a/public/BEL.html
+++ b/public/BEL.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>BEL</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 15.2</li>
     <li>2019: </li>
     <li>2020: </li>
+    <li>Historical Background: http://www.timelines.ws/countries/BELGIUM.HTML. The fluctuating rate of suicide rates may be due to these events: 1967 - In Belgium 323 people perished in a fire in a Brussels department store. 1985 - At Heysel Stadium rioting erupted between British and Italian spectators at the European Cup soccer final. 39 people were killed when rioting broke out and a wall separating British and Italian soccer fans collapsed. 1996 - Some 250000 people staged the &#34;White March&#34; through Brussels to demand changes in the police and justice system. 1998 - The worst storm in a century hit the Netherlands and Belgium over the past week. 2010 - Two commuter trains collided head-on which killed at least 18 people and injured 55</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1118</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
