--- a/public/CAN.html
+++ b/public/CAN.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>CAN</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 10.1</li>
     <li>2019: 10.5</li>
     <li>2020: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/canada_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1959 - The opening of the St. Lawrence Seaway allowing ships access to the Great Lakes from the Atlantic Ocean. 1982 - The Canada Act is passed by the British Parliament giving all remaining legal powers to Canada. A new constitution is adopted. 1995 - Quebec narrowly rejects independence. 2003 - Canada decides not to join in the war in Iraq</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 739</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
