--- a/public/CHE.html
+++ b/public/CHE.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>CHE</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 11.1</li>
     <li>2019: 11.1</li>
     <li>2020: </li>
+    <li>Historical Background: http://history-switzerland.geschichte-schweiz.ch/timeline-switzerlands-history.html. The fluctuating rate of suicide rates may be due to these events: 1963 - Becomes a member of Council of Europe. 1971 - Women&#39;s Suffrage accepted in a national referendum. 1992 - In a referendum the Swiss electorate decides not to join group of associates to the European Union. 2002 - Switzerland joins the UN</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1169</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
