--- a/public/CHL.html
+++ b/public/CHL.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>CHL</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 10</li>
     <li>2019: </li>
     <li>2020: </li>
+    <li>Historical Background: https://www.bbc.com/news/world-latin-america-19356356.amp. The fluctuating rate of suicide rates may be due to these events: 1964 - Eduardo Frei Montalva elected president and introduces cautious social reforms but fails to curb inflation. 1973 - Chief of Staff General Augusto Pinochet ousts Allende in a coup and proceeds to establish a brutal dictatorship. 2000 - Chilean courts strip Gen Pinochet of his immunity from prosecution several times with judges usually citing concerns over the general&#39;s health. 2010 - Hundreds die and widespread damage is caused as a massive earthquake strikes central Chile. The 8.8 magnitude quake is the biggest to hit the country in 50 years</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 490</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
