--- a/public/DNK.html
+++ b/public/DNK.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>DNK</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 9.7</li>
     <li>2019: </li>
     <li>2020: </li>
+    <li>Historical Background: https://www.bbc.com/news/world-europe-17930409. The fluctuating rate of suicide rates may be due to these events: 1959 - Denmark joins European Free Trade Association. 1973 - Denmark joins the European Economic Community. 1985 - Legislation passed banning construction of nuclear power plants in Denmark. 2000 - Danes reject adoption of the euro as their national currency by 53% to 47%. 2013 - Schools shut for a month because of an industrial dispute involving teachers&#39; unions</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1180</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
