--- a/public/HRV.html
+++ b/public/HRV.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>HRV</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: </li>
     <li>2019: 13</li>
     <li>2020: </li>
+    <li>Historical Background: https://daattravel.com/resources/croatia/timeline/. The fluctuating rate of suicide rates may be due to these events: 1960 Socio-economic improvements; “repressive but not oppressive” political system. 1989 Communist control weakening like in much of Eastern Europe. Croatia worried by Serbian nationalist leaders including Slobodan Milošević. 1990 Yugoslav inflation (1240% per year) another factor in Croatian separatism. 1999 Last Yugoslav war (in Serbian province of Kosovo) ends after NATO bomb Serbs. Over 2 million refugees &amp; displaced people after widespread ethnic cleansing. 2008 Global financial crisis hits Croatia hard. Public spending slashed</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 694</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
