--- a/public/KOR.html
+++ b/public/KOR.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>KOR</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 25.5</li>
     <li>2019: 25.4</li>
     <li>2020: 24.1</li>
+    <li>Historical Background: https://www.insightguides.com/destinations/asia-pacific/south-korea/historical-highlights. The fluctuating rate of suicide rates may be due to these events: 1962 - Yun’s government falls. Major General Park Chung-hee heads military government until assassination in 1979. 1980 - Major General Chun Doo-hwan becomes president. Military crushes citizens’ -democratic movement in Gwangju. 1997 - Korea battered by Asian economic crisis. 2006 - Six-party talks with North Korea over the nuclear issue fail to make significant progress. 2008 - Economy seriously damaged by global downturn</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 751</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
