--- a/public/PER.html
+++ b/public/PER.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>PER</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 1.7</li>
     <li>2019: </li>
     <li>2020: </li>
+    <li>Historical Background:  http://www.discover-peru.org/peru-history-timeline/. The fluctuating rate of suicide rates may be due to these events: 1968 – Coup d’état by Juan Velasco Alvarado. Large scale nationalizations of key industries. 1975 – Coup d’état by Morales Bermudez. 1983 – El Niño caused extensive flooding in the north of the country and drought in the interior. Large damage to the economy. 1990 – First government of Alberto Fujimori. Restored market based economy and decreased inflation from 400% to almost 0%</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 28</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
