--- a/public/TUR.html
+++ b/public/TUR.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>TUR</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -68,7 +68,7 @@
     <li>2006: </li>
     <li>2007: </li>
     <li>2008: </li>
-    <li>2009: 2.1</li>
+    <li>2009: </li>
     <li>2010: 2.4</li>
     <li>2011: 1.8</li>
     <li>2012: 2.2</li>
@@ -80,6 +80,10 @@
     <li>2018: </li>
     <li>2019: 4.4</li>
     <li>2020: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/turkey_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1960 - The army stages a coup of the government. 1974 - Turkey invades Cyprus. 1980 - Another coup takes place and martial law is established for a period. 1999 - A 7.4 magnitude earthquake kills around 17000 people. 2005 - Turkey begins negotiations in an effort to join the European Union</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 17</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
