--- a/public/ARG.html
+++ b/public/ARG.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>ARG</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 8</li>
     <li>2019: 7.8</li>
     <li>2020: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/argentina_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1955 - Argentina goes through a period of military rule and weak governments. 1976 - The military takes over the government and removes Isabel from office. The Dirty War begins where any suspected opponents to the government are jailed or killed. 1982 - The Falkland War occurs as Argentina invades the British Falkland Islands. British armed forces quickly take back control under the orders of Margaret Thatcher. 2013 - Pope Francis is named the first pope from the Americas</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 409</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
