--- a/public/AUT.html
+++ b/public/AUT.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>AUT</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 12.5</li>
     <li>2019: 11.4</li>
     <li>2020: 10.8</li>
+    <li>Historical Background: https://www.bbc.com/news/world-europe-17431408.amp. The fluctuating rate of suicide rates may be due to these events: 1955 - Treaty signed by UK and France and US and USSR establishes an independent but neutral Austria - a convenient buffer between the West and the Soviet bloc. Austria joins the United Nations. 1986 - Ex-UN Secretary-General Kurt Waldheim elected president. 2001 - Deal signed on compensating Jews whose assets were seized by Nazis. Government and companies to pay $360m into a settlement fund. 2020 Jihadist gunmen kills four people in central Vienna</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1303</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
