--- a/public/BGR.html
+++ b/public/BGR.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>BGR</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 8.3</li>
     <li>2019: 7.4</li>
     <li>2020: </li>
+    <li>Historical Background: https://www.bbc.com/news/world-europe-17205431. The fluctuating rate of suicide rates may be due to these events: 1978 - Georgi Markov dies in London after apparently being injected with poison from the tip of an umbrella. 1984 - Zhivkov government tries to force Turkish minority to assimilate and take Slavic names. Many resist and in 1989 some 300000 flee the country. 1990 - Economic crisis. Communist Party reinvents itself as Bulgarian Socialist Party (BSP) and wins free parliamentary elections. 1997 - Mass protests over economic crisis. Opposition boycotts parliament and calls for elections. 2007 June - The European Commission calls on Bulgaria to do more to combat corruption</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 829</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
