--- a/public/COL.html
+++ b/public/COL.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>COL</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 6</li>
     <li>2019: 5.9</li>
     <li>2020: </li>
+    <li>Historical Background: timelines.ws/countries/COLOMBIA.HTML. The fluctuating rate of suicide rates may be due to these events: 1962 - The Revolutionary Armed Forces of Colombia began guerilla action. 1978 - In Colombia Hector Jose Buitrago (32) founded a criminal band called the Butragueno. It later became the Self-Defense Forces of ACC. 1983 - A 5.4 earthquake hit and killed about 250 people and left some 1500 injured. 1991 - The homicide rate in Medellin peaked at 381 per 100000 people. By 2014 it had dropped to fewer than 50 per 100000. 2000 - Gunmen killed at least 17 people in 2 massacres at Cienega and Buenaventura. 2010 - Suspected leftist rebels killed 14 police officers and wounded seven in an ambush of a five-truck convoy</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 241</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
