--- a/public/CRI.html
+++ b/public/CRI.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>CRI</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 7.9</li>
     <li>2019: 7.8</li>
     <li>2020: 7</li>
+    <li>Historical Background: https://www.bbc.com/news/world-latin-america-19414834. The fluctuating rate of suicide rates may be due to these events: 1963-64 - Irazu volcano eruption causes serious damage to agriculture. 1968 - Arenal volcano eruption causing many casualties. 1978 - Rodrigo Carazo elected president amid a sharp deterioration in the economy. 1985 - US-trained anti-guerrilla force begins operating following clashes with Sandinista troops. 2004 October - Mounting concern over corruption as three former presidents are investigated over contractor payments</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 363</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
