--- a/public/EST.html
+++ b/public/EST.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>EST</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 14</li>
     <li>2019: 14.1</li>
     <li>2020: 15.2</li>
+    <li>Historical Background: https://www.globalroadwarrior.com/estonia/historical-timeline.html. The fluctuating rate of suicide rates may be due to these events: 1949 - A guerrilla war is fought between the occupying forces and Estonians known as the Forest Brothers. The war is ended by the mass deportation of over 20000 Estonians to inhospitable areas of the Soviet Union. 1960 - Some of the deported Estonians are allowed to return to the country. 1987 - The first open protests against Soviet rule occur on the streets of Estonian cities. 2017 - NATO sends 800 British troops to Estonia in an effort to combat what it sees as Russian aggression. Other troops are deployed to surrounding Baltic nations as part of a major NATO mission</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 985</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
