--- a/public/FIN.html
+++ b/public/FIN.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>FIN</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 14.4</li>
     <li>2019: 13.4</li>
     <li>2020: </li>
+    <li>Historical Background: https://www.bbc.co.uk/news/world-europe-17292092.amp. The fluctuating rate of suicide rates may be due to these events: 1973 - Trade agreements signed with the European Economic Community and Comecon. 1990 - Economic difficulties as former Soviet and eastern European markets collapse. 1995 - Finland becomes member of the European Union. 2008 September - A 22-year-old gunman kills 11 people - including himself - in a shooting spree at a vocational college</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1362</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
