--- a/public/GRC.html
+++ b/public/GRC.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>GRC</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 4.9</li>
     <li>2019: 4.6</li>
     <li>2020: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/greece_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1975 - Greece forms a new parliamentary republic with a new constitution. 1981 - Greece joins the European Union. Andreas Papandreou is elected prime minister for the first time. 2002 - The Euro becomes the official currency replacing the drachma. 2013 - Unemployment climbs to over 26%. The youth unemployment nears 60%</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 201</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
