--- a/public/IRL.html
+++ b/public/IRL.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>IRL</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 9.4</li>
     <li>2019: </li>
     <li>2020: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/ireland_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1969 - The Troubles begin in Northern Ireland between the IRA and the loyalists. Constant violence between the two groups existed up until 1998. 1990 - Mary Robinson is elected President of Ireland. She is the first woman president of the country. 1998 - The Belfast Agreement is signed reducing the violence and putting an end to The Troubles</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 451</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
