--- a/public/ISL.html
+++ b/public/ISL.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>ISL</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 9.8</li>
     <li>2019: 11.2</li>
     <li>2020: 12.7</li>
+    <li>Historical Background: https://www.bbc.co.uk/news/world-europe-17386859.amp. The fluctuating rate of suicide rates may be due to these events: 1958-61 - First &#34;Cod War&#34; between Iceland and UK as Iceland extends its fishing limit to 19km. 1980 - Iceland suffers from high inflation averaging 38% annually. 1985 - Iceland declares itself a nuclear-free zone. 2006 - The last US military personnel leave the Keflavik base. The US says it will defend Iceland as a Nato ally. 2011 - Economy registers first signs of growth in response to austerity programme and unemployment begins to fall fast</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 781</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
