--- a/public/ISR.html
+++ b/public/ISR.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>ISR</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 6.2</li>
     <li>2019: 5.7</li>
     <li>2020: 5.7</li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/israel_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1967 - The Six-Day War is fought between Israel and a group of Arab nations. 1973 - The Yom Kippur War takes place when Egypt and Syria attack Israel on the Jewish holy day of Yom Kippur. Israel was able to push back the Egyptian army. 1991 - The Gulf War occurs. Israel is hit by Scud missiles from Iraq</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 338</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
