--- a/public/JPN.html
+++ b/public/JPN.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>JPN</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 15</li>
     <li>2019: 14.6</li>
     <li>2020: </li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/japan_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1968 - Japan becomes the second largest economic power in the world. 1972 - The United States returns Okinawa to Japan. 1989 - Emperor Hirohito dies. 2011 - Earthquake and Tsunami cause extensive damage including radiation leaks from a nuclear plant</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1256</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
