--- a/public/LTU.html
+++ b/public/LTU.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>LTU</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 22.9</li>
     <li>2019: 22.2</li>
     <li>2020: 20.3</li>
+    <li>Historical Background: https://daattravel.com/resources/lithuania/timeline/. The fluctuating rate of suicide rates may be due to these events: 1970 Soviet-planned urbanization. Half of the country lives in towns. 1987 USSR under Gorbachev permits greater Lithuanian freedom of expression. Lithuania at heart of push for independence from USSR. 1995 Independence blues: 1000 % inflation. Lithuanian President visits Israel to apologize for country’s role in Holocaust. 2009 Economy badly affected by global economic crisis</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1372</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
