--- a/public/LVA.html
+++ b/public/LVA.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>LVA</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 14.7</li>
     <li>2019: 14.4</li>
     <li>2020: 14.9</li>
+    <li>Historical Background: https://daattravel.com/resources/latvia/timeline/. The fluctuating rate of suicide rates may be due to these events: 1959 - Many Russians move to Latvia; Russian language officially favored. Jewish population increases to 36000 with arrival of some Russian Jews. Economy based on machine-manufacturing for Soviets. 1989 - Hands Across the Baltics: Non-violent independence protests. 1991 - Communist rule in USSR collapses. Latvia declares independence. Democratic government confronted with significant economic problems. 2009 - Severe recession temporarily interrupts period of rapid economic growth</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 1127</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
