--- a/public/MEX.html
+++ b/public/MEX.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>MEX</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 5.5</li>
     <li>2019: 5.7</li>
     <li>2020: 6.3</li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/mexico_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1968 - The Summer Olympics are held in Mexico City. 1985 - A huge 8.1 level earthquake hits Mexico City. Much of the city is destroyed and over 10000 people are killed. 1993 - The North American Trade Agreement (NAFTA) with Canada and the United States is ratified. 2000 - Vicente Fox is elected president. He is the first president not from the PRI party in 71 years</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 164</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
