--- a/public/NLD.html
+++ b/public/NLD.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>NLD</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 10.2</li>
     <li>2019: 10</li>
     <li>2020: 10</li>
+    <li>Historical Background: ​​https://www.ducksters.com/geography/country/netherlands_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1953 - The North Sea Flood kills over 1800 people. The government starts construction on the Delta Works to prevent future flooding. 1975 - Independence is granted to the Dutch colony of Surinam. 1995 - A great flood causes a state of emergency and hundreds of thousands of people are evacuated. 1997 - The Delta Works are completed</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 605</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
