--- a/public/NZL.html
+++ b/public/NZL.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>NZL</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: </li>
     <li>2019: </li>
     <li>2020: </li>
+    <li>Historical Background: https://www.bbc.com/news/world-asia-pacific-15370160. The fluctuating rate of suicide rates may be due to these events: 1960s - New Zealand sends a small combat force to support US troops in Vietnam. 1984 - Prime Minister David Lange begins radical free-market economic reforms. 2007 - Police arrest 17 people in anti-terror raids. Prosecutors accuse Maori activists of planning a violent campaign against the country&#39;s white majority. 2019 - Fifty people are killed when a far-right gunman attacks worshippers in two mosques in Christchurch. Government tightens gun laws</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 705</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
