--- a/public/ROU.html
+++ b/public/ROU.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>ROU</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 9.5</li>
     <li>2019: 8.6</li>
     <li>2020: </li>
+    <li>Historical Background: https://www.bbc.com/news/world-europe-17776876. The fluctuating rate of suicide rates may be due to these events: 1977 - Bucharest earthquake kills around 1500 people. 1985-86 - Austerity programme aimed at reducing foreign debt leads to food shortages and widespread power cuts. 1990 - Student and opposition protests against ex-communist leadership crushed when 20000 miners are brought in to stage a counter demonstration. 2005 - Romania signs EU accession treaty. 2017 - Some 200000 people protest over government attempts to water down corruption measures</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 360</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
