--- a/public/USA.html
+++ b/public/USA.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>USA</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 15</li>
     <li>2019: 14.7</li>
     <li>2020: 14.1</li>
+    <li>Historical Background: https://www.ducksters.com/geography/country/united_states_history_timeline.php. The fluctuating rate of suicide rates may be due to these events: 1963 - President John F. Kennedy is assassinated. 1968 - Martin Luther King Jr. is assassinated. 2001 - The 9-11 terrorist attacks occur when hijacked passenger planes crash into the World Trade Center towers and The Pentagon. 2003 - The Iraq War begins as the U.S. and other countries invade Iraq</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 783</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is greater than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
