--- a/public/ZAF.html
+++ b/public/ZAF.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <title>ZAF</title>
-  <meta name="Country" content="You">
+  <meta name="Suicides per Population page" content="You">
   <meta name="description" content="Suicides per Population">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 
@@ -80,6 +80,10 @@
     <li>2018: 0.6</li>
     <li>2019: </li>
     <li>2020: </li>
+    <li>Historical Background: http://countrystudies.us/south-africa/89.htm. The fluctuating rate of suicide rates may be due to these events: 1952 - Interracial violence flares. Black Defiance Campaign leaders convicted of &#34;statutory communism.&#34; 1962 - UN General Assembly calls for sanctions against South Africa. Nelson Mandela was sentenced to five years in prison for inciting unrest. 1976 - Worst racial violence in history in Soweto; 575 reported dead. 1986 - Military attacks on ANC. 1993 - Political violence surges. US citizen Amy Biehl killed in township unrest. ANC acknowledges human rights&#39; abuses</li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: 10</li>
+    <li>Macro Average across all countries during 1960-2020: 622</li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: The total suicides in this counrty is lesser than the average among all countries included from 1960 until 2020.</li>
   </ul>
   </section>
 
