Fixing plotly again

--- a/public/AUS.html
+++ b/public/AUS.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
   <meta charset="utf-8" />
   <title>AUS</title>
   <meta name="Suicides per Population page" content="You">
