--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
       var data = [{
           type: 'choropleth',
           locationmode: 'country names',
-          locations: ["Australia","Argentina","Austria","Belgium","Bulgaria","Brazil","Canada","Switzerland"],
-          z: [8,8,8,8,8,8,8,8],
+          locations: ["Australia","Argentina","Austria","Belgium","Bulgaria","Brazil","Canada","Switzerland","Chile","Columbia","Costa Rica","Czech Republic","Germany","Denmark","Spain","Estonia","Finland","France","United Kingdom","Greece","Croatia","Hungary","Ireland","Iceland","Israel","Italy","Japan","South Korea","Lithuania","Luxembourg","Latvia"],
+          z: [<data[AUS].ten]>],
           zmax: 25,
           zmin: 7,
           autocolorscale: true
