--- a/public/about.html
+++ b/public/about.html
@@ -198,8 +198,8 @@
     <p>Then we will use EJS to dynamically insert our data onto our webpage.</p>
     <p>We plan on using the plotly software Specifically a dynamic countries map that uses shades of colors to represent density of a variable.</p>
     <h5>Division of labor:</h5>
-    <p>Solomon: generateJSON.js, build, Deploy, drop down menus, Map, graphics.</p>
-    <p>Nicole: siteGenerator.js, navbar, index.ejs, about.ejs, Build Pipeline, countries.ejs, research on reasoning for micro pages, csv adjustement and according generateJSON.js update</p>
+    <p>Solomon: generateJSON.js, Build Pipeline, Deploy, drop down menus, Map, graphics.</p>
+    <p>Nicole: siteGenerator.js, navbar, index.ejs, about.ejs, countries.ejs, research on reasoning for micro pages, csv adjustement and according generateJSON.js update</p>
     <p>Solomon+Nicole: CSS/bootstrap done together</p>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
